[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chatterbox-tts>=0.1.6",
    "email-validator>=2.3.0",
    "motor>=3.7.1",
    "num2words>=0.5.14",
    "onnx<1.19.0",
    "pydantic-settings>=2.13.1",
    "pydub>=0.25.1",
    "scipy>=1.15.3",
    "setuptools<82.0.0",
    "soundfile>=0.13.1",
]
